--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -105,7 +105,7 @@ p > svg {
 }
 
 :where([color-scheme="dark"]) {
-	/* --brand: #c3a94d; */
+  color-scheme: dark;
 
 	--link: var(--indigo-3);
 	--link-visited: var(--grape-3);
@@ -126,7 +126,6 @@ p > svg {
 }
 :where([color-scheme="light"]) {
   color-scheme: light;
-	/* --brand: #ac9339; */
 
 	--link: var(--indigo-7);
 	--link-visited: var(--grape-7);
