--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -28,12 +28,15 @@ html {
 }
 :where(h3) {
 	font-size: var(--font-size-4);
+	margin-block-end: .25ch;
 }
 :where(h4) {
 	font-size: var(--font-size-3);
+	margin-block-end: .25ch;
 }
 :where(h5) {
 	font-size: var(--font-size-2);
+	margin-block-end: .25ch;
 }
 :where(h6) {
 	font-size: var(--font-size-2);
@@ -46,7 +49,7 @@ html {
 		font-size: var(--font-size-6);
 	}
 	:where(h3) {
-		font-size: var(--font-size-5);
+		font-size: var(--font-size-4);
 	}
 	:where(h4) {
 		font-size: var(--font-size-4);
